--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="card-deck mt-5">
         <div class="row">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top rounded-circle" src="https://ih1.redbubble.net/image.690113833.2096/raf,750x1000,075,t,FFFFFF:97ab1c12de.u2.jpg" alt="Card image cap">
+                <img class="card-img-top rounded-circle" src="https://raw.githubusercontent.com/Beardificent/carousel/master/goku.png" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">GOKU</h5>
                     <p class="card-text"> filler filler </p>
