--- a/index.html
+++ b/index.html
@@ -74,6 +74,22 @@
                     <button type="button"  class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top rounded-circle" src="" alt="Card image cap">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">BROLY</h5>
+                    <p class="card-text"> filler filler </p>
+                    <button type="button"  class="btn btn-dark mt-auto">view details>></button>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top rounded-circle" src="https://raw.githubusercontent.com/Beardificent/carousel/master/black.png" alt="Card image cap">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">BLACK</h5>
+                    <p class="card-text"> filler filler </p>
+                    <button type="button"  class="btn btn-dark mt-auto">view details>></button>
+                </div>
+            </div>
     </div>
 </div>
 </div>
