--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top rounded-circle" src="" alt="Card image cap">
+                <img class="card-img-top rounded-circle" src="https://raw.githubusercontent.com/Beardificent/carousel/master/broly.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">BROLY</h5>
                     <p class="card-text"> filler filler </p>
@@ -93,6 +93,10 @@
     </div>
 </div>
 </div>
+
+<hr/>
+
+
 
 
 
