added vegeta pic and new layout

--- a/index.html
+++ b/index.html
@@ -96,8 +96,38 @@
 
 <hr/>
 
-<img src="..." class="rounded float-right" alt="Vegeta">
+<div class="container">
+    <div class="media">
+        <div class="media-body">
+            <h1 class="mt-0 mb-1">Majin Vegeta</h1>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        </div>
+        <img class="d-flex ml-3 mx-auto" src="https://raw.githubusercontent.com/Beardificent/carousel/master/vegeta.png" alt="Generic placeholder image">
+    </div>
 
+    <br>
+
+    <div class="media">
+        <img class="d-flex align-self-start mr-3" src="jelly1.jpg" alt="Generic placeholder image">
+        <div class="media-body">
+            <h1 class="mt-0">Top-aligned media</h1>
+            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        </div>
+    </div>
+
+
+    <br>
+
+    <div class="media">
+
+        <div class="media-body">
+            <h1 class="mt-0 mb-1">Media object</h1>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        </div>
+        <img class="d-flex ml-3" src="jelly2.jpg" alt="Generic placeholder image">
+    </div>
+</div>
 
 
 
