--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     <br>
 
     <div class="media">
-        <img class="d-flex align-self-start mr-3" src="jelly1.jpg" alt="Generic placeholder image">
+        <img class="d-flex align-self-start mr-3" src="https://raw.githubusercontent.com/Beardificent/carousel/master/buu.png" alt="Generic placeholder image">
         <div class="media-body">
-            <h1 class="mt-0">Top-aligned media</h1>
+            <h1 class="mt-0">Fat Buu</h1>
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
             <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
         </div>
@@ -125,7 +125,7 @@
             <h1 class="mt-0 mb-1">Media object</h1>
             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
         </div>
-        <img class="d-flex ml-3" src="jelly2.jpg" alt="Generic placeholder image">
+        <img class="d-flex ml-3" src="" alt="Generic placeholder image">
     </div>
 </div>
 
