text margins fixed

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <div class="parent d-flex justify-content-center">
-                <img class="img-resp" src="https://coverfiles.alphacoders.com/443/44393.jpg"
-                     data-src="holder.js/900x400?theme=social" alt="First slide">
-                <div class="carousel-caption d-none d-md-block text-warning">
-                    <h3>DRAGON BALL Z</h3>
-                    <p>THE STORY ABOUT THE MONKEY KING</p>
+            <img class="img-resp" src="https://coverfiles.alphacoders.com/443/44393.jpg"
+                 data-src="holder.js/900x400?theme=social" alt="First slide">
+            <div class="carousel-caption d-none d-md-block text-warning">
+                <div class="text-left mb-3">
+                    <h3 class="font-weight-bolder text-danger">DRAGON BALL Z</h3>
+                    <p class="font-weight-bolder text-danger">THE STORY ABOUT THE MONKEY KING</p>
+                    <button type="button" class="btn btn-primary mr-4">SIGN UP TODAY</button>
                 </div>
             </div>
         </div>
@@ -67,31 +68,36 @@
     <div class="card-deck mt-5">
         <div class="row">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top rounded-circle" src="https://raw.githubusercontent.com/Beardificent/carousel/master/goku.png" alt="Card image cap">
+                <img class="card-img-top rounded-circle"
+                     src="https://raw.githubusercontent.com/Beardificent/carousel/master/goku.png" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">GOKU</h5>
                     <p class="card-text"> filler filler </p>
-                    <button type="button"  class="btn btn-dark mt-auto">view details>></button>
+                    <button type="button" class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top rounded-circle" src="https://raw.githubusercontent.com/Beardificent/carousel/master/broly.jpg" alt="Card image cap">
+                <img class="card-img-top rounded-circle"
+                     src="https://raw.githubusercontent.com/Beardificent/carousel/master/broly.jpg"
+                     alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">BROLY</h5>
                     <p class="card-text"> filler filler </p>
-                    <button type="button"  class="btn btn-dark mt-auto">view details>></button>
+                    <button type="button" class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top rounded-circle" src="https://raw.githubusercontent.com/Beardificent/carousel/master/black.png" alt="Card image cap">
+                <img class="card-img-top rounded-circle"
+                     src="https://raw.githubusercontent.com/Beardificent/carousel/master/black.png"
+                     alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">BLACK</h5>
                     <p class="card-text"> filler filler </p>
-                    <button type="button"  class="btn btn-dark mt-auto">view details>></button>
+                    <button type="button" class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
+        </div>
     </div>
-</div>
 </div>
 
 <hr/>
@@ -99,20 +105,37 @@
 <div class="container">
     <div class="media">
         <div class="media-body">
-            <h1 class="mt-0 mb-1">Majin Vegeta</h1>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <div class="m-5">
+                <h1 class="mt-0 mb-1">Majin Vegeta</h1>
+
+
+                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio,
+                vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
+                Donec
+                lacinia congue felis in faucibus.
+            </div>
         </div>
-        <img class="d-flex ml-3 mx-auto" src="https://raw.githubusercontent.com/Beardificent/carousel/master/vegetas.png" alt="Generic placeholder image">
+        <img class="d-flex ml-3 mx-auto"
+             src="https://raw.githubusercontent.com/Beardificent/carousel/master/vegetas.png"
+             alt="Generic placeholder image">
     </div>
 
     <br>
 
     <div class="media">
-        <img class="d-flex align-self-start mr-3" src="https://raw.githubusercontent.com/Beardificent/carousel/master/buu.png" alt="Generic placeholder image">
+        <img class="d-flex align-self-start mr-3"
+             src="https://raw.githubusercontent.com/Beardificent/carousel/master/buu.png"
+             alt="Generic placeholder image">
         <div class="media-body">
+            <div class="m-5">
             <h1 class="mt-0">Fat Buu</h1>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-            <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
+                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
+                fringilla. Donec lacinia congue felis in faucibus.</p>
+            <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et
+                magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </div>
         </div>
     </div>
 
@@ -122,14 +145,19 @@
     <div class="media">
 
         <div class="media-body">
-            <h1 class="mt-0 mb-1">Media object</h1>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            <div class="m-5">
+            <h1 class="mt-0 mb-1">Trunks</h1>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
+            vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
+            lacinia congue felis in faucibus.
+            </div>
         </div>
-        <img class="d-flex ml-3" src="" alt="Generic placeholder image">
+        <img class="d-flex ml-3" src="https://raw.githubusercontent.com/Beardificent/carousel/master/trunkss.png"
+             alt="Generic placeholder image">
     </div>
 </div>
 
-
+<hr/>
 
 
 
