--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
                      src="https://raw.githubusercontent.com/Beardificent/carousel/master/goku.png" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">GOKU</h5>
-                    <p class="card-text"> filler filler </p>
+                    <p class="card-text"> Son Goku (孫悟空 Son Gokū), born Kakarot (カカロット Kakarotto), is the main
+                        protagonist of the Dragon Ball metaseries. Goku is a Saiyan originally sent to destroy Earth as
+                        an infant. However, a head injury at an early age alters his memory, ridding him of his initial
+                        destructive nature and allowing him to grow up to become one of Earth's greatest defenders. He
+                        constantly strives and trains to be the greatest warrior possible, which has kept the Earth and
+                        the universe safe from destruction many times. </p>
                     <button type="button" class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
@@ -82,7 +87,11 @@
                      alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">BROLY</h5>
-                    <p class="card-text"> filler filler </p>
+                    <p class="card-text">Broly (ブロリー Burorī) is the son of Paragus and the misguided main antagonist of
+                        Dragon Ball Super: Broly. He is the latest of the Legendary Super Saiyans, a demonic Saiyan
+                        warrior who appears every thousand years. Because of his extreme power, he was stranded on the
+                        planet Vampa by King Vegeta, where he was raised by his father until rescued years later by the
+                        Frieza Force. </p>
                     <button type="button" class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
@@ -92,7 +101,13 @@
                      alt="Card image cap">
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">BLACK</h5>
-                    <p class="card-text"> filler filler </p>
+                    <p class="card-text"> Goku Black (ゴクウブラック Gokū Burakku), usually referred to as Black, is the main
+                        antagonist of the "Future" Trunks Saga of Dragon Ball Super. His true identity is the original
+                        present Zamasu (ザマス Zamasu), a former North Kai and Supreme Kai apprentice serving the Supreme
+                        Kai of Universe 10, Gowasu, from the unaltered main timeline, in which he stole the body of the
+                        original present Goku with the Super Dragon Balls and sought to destroy all mortals alongside
+                        Future Zamasu.[3] He was then given the name "Goku Black" by Future Bulma when he initially
+                        referred to himself as Goku. </p>
                     <button type="button" class="btn btn-dark mt-auto">view details>></button>
                 </div>
             </div>
@@ -100,7 +115,7 @@
     </div>
 </div>
 
-<hr/>
+<hr width=75% align=center/>
 
 <div class="container">
     <div class="media">
@@ -108,12 +123,17 @@
             <div class="m-5">
                 <h1 class="mt-0 mb-1">Majin Vegeta</h1>
 
+                <p>Majin Vegeta is the form Vegeta became when he became a follower of Babidi.</p>
 
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
-                odio,
-                vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                Donec
-                lacinia congue felis in faucibus.
+                <p>When Babidi attempted to mystically take control of Vegeta, he invaded his mind, something he could
+                    only achieve because of the hidden depths of evil lurking within his heart. This action was Babidi's
+                    last defence in an effort to use him against the other Z Fighters. It is revealed that Vegeta could
+                    have stopped his possession but willingly chose to let Babidi take control of his body, believing
+                    that by awakening the evil intentions within himself he would finally be able to defeat Goku. As he
+                    fought along side the Z Fighters during the years and grew attached to his new home on Earth and his
+                    family, Vegeta struggled to hold onto his merciless dark side which he believed was the true source
+                    of his power.
+                <p>
             </div>
         </div>
         <img class="d-flex ml-3 mx-auto"
@@ -121,7 +141,7 @@
              alt="Generic placeholder image">
     </div>
 
-    <br>
+    <hr width=75% align=center/>
 
     <div class="media">
         <img class="d-flex align-self-start mr-3"
@@ -129,27 +149,31 @@
              alt="Generic placeholder image">
         <div class="media-body">
             <div class="m-5">
-            <h1 class="mt-0">Fat Buu</h1>
-            <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus
-                odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate
-                fringilla. Donec lacinia congue felis in faucibus.</p>
-            <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et
-                magnis dis parturient montes, nascetur ridiculus mus.</p>
+                <h1 class="mt-0">Buu</h1>
+                <p>(Good) Buu (魔人ブウ（善） Majin Bū (Zen), lit. "Demon Person Boo (Good)"), also known mainly as Majin Buu,
+                    is the result of the Innocent Buu using fission to split into good and evil halves. He would go on
+                    to become a member of the Z Fighters and live with Mr. Satan. After the battle against the pure
+                    Majin Buu, Buu is referred to as Buu instead of Majin Buu and to the world he becomes Mr. Buu.
+
+                    Good Buu possesses the Grand Supreme Kai (大界王神 Dai Kaiōshin, lit. "Great God of the Kings of the
+                    Worlds*) as part of his being and eventually fully awakened this part of himself. </p>
             </div>
         </div>
     </div>
 
 
-    <br>
+    <hr width=75% align=center/>
 
     <div class="media">
 
         <div class="media-body">
             <div class="m-5">
-            <h1 class="mt-0 mb-1">Trunks</h1>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio,
-            vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec
-            lacinia congue felis in faucibus.
+                <h1 class="mt-0 mb-1">Trunks</h1>
+                <p>Well-mannered, serious and very cautious, Trunks hails from an alternate timeline in which Future
+                    Androids 17 and 18 murdered the Dragon Team and proceeded to create apocalyptic hell on Earth.[8]
+                    Trunks is trained by Future Gohan as a teenager and becomes a gifted fighter, swordsman and a Super
+                    Saiyan, which are traits that aid him greatly in the battle against the Androids after traveling
+                    back in time in order to save his own future.</p>
             </div>
         </div>
         <img class="d-flex ml-3" src="https://raw.githubusercontent.com/Beardificent/carousel/master/trunkss.png"
@@ -157,10 +181,14 @@
     </div>
 </div>
 
-<hr/>
+<hr width=75% align=center/>
 
+<footer class="container">
+    <p class=" float-left small">©2020 - 2020 Company, Inc. · <a href="https://www.youtube.com/watch?v=Bm5OVg50swY"
+    >Privacy</a> · <a href="https://www.youtube.com/watch?v=x0ToDYjxg5w">Terms</a></p>
 
-
+    <a class="float-right small"  href="#">Back to top</a>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
