--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Roulez Roulez</title>
+    <title>ROCK THE DRAGON</title>
 </head>
 <body>
 
@@ -18,10 +18,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://www.youtube.com/watch?v=6xZif3WmG7I">HOME<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">LINK</a>
+                <a class="nav-link" href="https://www.youtube.com/watch?v=P8E7Um_GidA">LINK</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">DISABLED</a>
