--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
-            <img class="img-resp" src="https://coverfiles.alphacoders.com/443/44393.jpg"
+            <img class="img-resp" src="https://raw.githubusercontent.com/Beardificent/carousel/master/header1.jpg"
                  data-src="holder.js/900x400?theme=social" alt="First slide">
             <div class="carousel-caption d-none d-md-block text-warning">
                 <div class="text-left mb-3">
@@ -49,7 +49,7 @@
         </div>
         <div class="carousel-item">
             <div class="parent d-flex justify-content-center">
-                <img class="img-resp" src="https://coverfiles.alphacoders.com/578/57837.jpg"
+                <img class="img-resp" src="https://raw.githubusercontent.com/Beardificent/carousel/master/header2.jpg"
                      data-src="holder.js/900x400?theme=industrial" alt="Second slide">
             </div>
         </div>
